--- a/.eslintrc
+++ b/.eslintrc
@@ -18,8 +18,8 @@
 	},
 	"extends": [
 		"eslint:recommended",
+		"plugin:react-hooks/recommended",
 		"plugin:@typescript-eslint/eslint-recommended",
-		"plugin:@typescript-eslint/recommended",
-		"plugin:react-hooks/recommended"
+		"plugin:@typescript-eslint/recommended"
 	]
 }
