--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,13 @@
     "jsx": "preserve"
   },
   "include": [
-    "next-env.d.ts",
+    "custom-next-env.d.ts",
+	"additional.d.ts",
     "**/*.ts",
     "**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+	"next-env.d.ts"
   ]
 }
